--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,14 @@
 
     <form>
       <input placeholder="location" id="location" name="location">
-      <input placeholder="activity" id="key" name="key">
-      <button type="submit">Search</button>
+
+      <button id="hotel" class="key">Hotel</button>
+      <button id="golf"class="key">Golf</button>
+      <button id="soccer"class="key">Soccer</button>
+      <button id="basketball"class="key">Basketball</button>
+      <button id="paintballing"class="key">Paintball</button>
+      <button id="skiing"class="key">Skiing</button>
+      <button id="windsurfing" class="key">Windsurfing</button>
 
       <h1 id="message"></h1>
     </form><br>
@@ -21,27 +27,50 @@
       <div class="div">
         <p> Name: <%= obj.name %> </p>
         <p> Address: <%= obj.address %> </p>
+        <p> Price: $<%= obj.price %> </p>
         <p> Star Rating: <%= obj.rating %> </p>
       </div>
     <% }) %>
 
     <script>
-      const locationForm = document.querySelector('form')
+
       const locate = document.querySelector('#location')
-      const keyLocate = document.querySelector('#key')
-      const message = document.querySelector('#message')
 
-      locationForm.addEventListener('submit', (event) => {
-      event.preventDefault()
-
-      const location = locate.value
-      const key = keyLocate.value
-
-
-
-      window.location = `http://localhost:3000/holidayresort/?key=${key}&location=${location}`
-    })
-      message.textContent = `${key} in ${location}`
+      const hotelBtn = document.getElementById('hotel').addEventListener('click', (e)=>{
+        e.preventDefault()
+        const firstLocation = locate.value
+        window.location = `http://localhost:3000/holidayresort/?key=hotel&location=${firstLocation}`
+      })
+      document.querySelector('#golf').addEventListener('click', (e)=>{
+        e.preventDefault()
+        const firstLocation = locate.value
+        window.location = `http://localhost:3000/holidayresort/?key=golf&location=${firstLocation}`
+      })
+      document.querySelector('#soccer').addEventListener('click', (e)=>{
+        e.preventDefault()
+        const firstLocation = locate.value
+        window.location = `http://localhost:3000/holidayresort/?key=soccer&location=${firstLocation}`
+      })
+      document.querySelector('#basketball').addEventListener('click', (e)=>{
+        e.preventDefault()
+        const firstLocation = locate.value
+        window.location = `http://localhost:3000/holidayresort/?key=basketball&location=${firstLocation}`
+      })
+      document.querySelector('#paintballing').addEventListener('click', (e)=>{
+        e.preventDefault()
+        const firstLocation = locate.value
+        window.location = `http://localhost:3000/holidayresort/?key=paintballing&location=${firstLocation}`
+      })
+      document.querySelector('#skiing').addEventListener('click', (e)=>{
+        e.preventDefault()
+        const firstLocation = locate.value
+        window.location = `http://localhost:3000/holidayresort/?key=skiing&location=${firstLocation}`
+      })
+      document.querySelector('#windsurfing').addEventListener('click', (e)=>{
+        e.preventDefault()
+        const firstLocation = locate.value
+        window.location = `http://localhost:3000/holidayresort/?key=windsurfing&location=${firstLocation}`
+      })
 
     </script>
 
