--- a/public/stylesheets/style-membership.css
+++ b/public/stylesheets/style-membership.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');
+/* membership import */
+/* @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,800);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:800); */
 /* p{
     margin: 0px;
 } */
@@ -8,6 +11,7 @@ body {
   box-sizing: border-box;
   padding: 0;
   font-family: 'Dosis', sans-serif;
+  overflow: hidden;
 }
 .header_wrapper {
   background: linear-gradient(
@@ -16,28 +20,25 @@ body {
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.4)
     ),
-    url('../images/homepage6.jpeg');
+    url('../images/homepage4.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   height: 80vh;
   background-size: cover;
-  overflow: hidden;
   /* height: 100vh; */
 }
 .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px;
-  background-color: transparent;
+  padding: 10px;
+  background-color: #0096c7;
   /* position: sticky;
     z-index: 100;
     top: 0; */
 }
 .nav-container {
   display: flex;
-  /* position: sticky;
-    top: 0; */
 }
 .page {
   margin-right: 17px;
@@ -85,17 +86,6 @@ span.explore_btn:hover {
   top: 40%;
   left: 25%;
 }
-.search_bar {
-  width: 50%;
-  margin: 40px;
-  height: 40px;
-  border-radius: 20px;
-  font-size: 20px;
-  font-family: 'Roboto', sans-serif;
-  margin-top: 60px;
-  margin-left: 20%;
-  padding: 5px;
-}
 .destination {
   color: #ffffff;
   font-size: 1.7em;
@@ -119,120 +109,178 @@ span.explore_btn:hover {
   background-color: teal;
   cursor: pointer;
 }
-/* input field */
-/* .activity_container{
-  padding: 15px;
-} */
-.text_head {
-  margin-left: 30px;
-  font-size: 35px;
-  font-size: 'Roboto', sans-serif;
-  font-weight: 300;
-  margin-top: 20px;
-  margin-bottom: 30px;
+.input-destination a {
+  text-decoration: none;
+  color: white;
 }
-.input-fields {
-  outline: none;
-  width: 150px;
-  height: 100px;
-  margin: 60px auto;
-  text-align: center;
-  /* margin: 45px; */
+.input-destination:hover {
+  text-decoration: underline;
 }
-.location-text p {
-  font-size: 1.2em;
-  width: 250px;
-  text-align: center;
+/* countries */
+/* .countries {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    margin: auto;
 }
-.location-search {
-  outline: none;
-  width: 150px;
-  padding: 25px;
-  height: 0px;
-  border-radius: 25px;
-  font-size: 1.4em;
+.countries-head{
+    margin-left: 30px;
+    font-size: 20px;
 }
-/* activities palette */
-.activity-selection {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  /* flex-wrap: wrap; */
-  justify-content: space-evenly;
-  align-content: center;
+.countries-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    
+}
+.country{
+    border: 1px black solid;
+    width: 30%;
+    height: 300px;
+    margin: 10px;
+    text-align: center;
+}
+.img1 {
+    background-image: url("./countries/cairo.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.img2 {
+    background-image: url("./countries/cape-town.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.img3 {
+    background-image: url("./countries/dubai.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.img4 {
+    background-image: url("./countries/fuerventura.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.img5 {
+    background-image: url("./countries/london.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.img6 {
+    background-image: url("./countries/mauritius.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+/* Activities */
+/*
+.activities-wrapper {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    margin: auto;
+}
+.activity-head {
+    margin-left: 30px;
+}
+.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    
 }
 .activity {
-  /* width: 100px; */
-  width: 20%;
-  height: 30px;
-  padding: 10px;
-  /* outline: none; */
-  cursor: pointer;
-  background-color: white;
-  /* #0096c7 */
-  /* outline: none; */
-  color: #0096c7;
-  border-radius: 10px;
-  border: 1px solid #0096c7;
-  margin-bottom: 15px;
-  transition: linear all 0.6s;
-  font-size: 20px;
-  letter-spacing: 1px;
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
+    border: 1px black solid;
+    width: 20%;
+    height: 300px;
+    margin: 10px;
+    text-align: center;
 }
-.activity:hover {
-  color: white;
-  background-color: #0096c7;
+.activitypic1{
+    background-image: url("./images/activities/astroturf.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
 }
-/* Location Selection */
-/* .category {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: center;
-} */
-.location_flex {
-  /* width: 80%; */
-  display: flex;
-  /* justify-content: space-around; */
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 20px;
-  margin-bottom: 60px;
-  /* flex-direction: row; */
-  /* flex-wrap: wrap; */
+.activitypic2{
+    background-image: url("./images/activities/basketball2.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
 }
-.image {
-  box-sizing: border-box;
-  border: 1px solid black;
-  /* box-shadow: 10px 10px grey; */
-  border-radius: 20px;
-  width: 30%;
-  height: 500px;
-  margin: 10px;
-  overflow: hidden;
-  /* padding-bottom:10px ; */
-  /* display: flex;
-  flex-direction: column; */
-  /* object-fit: contain; */
+.activitypic3{
+    background-image: url("./images/activities/beach-soccer.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
 }
-/* .img-background {
-  height: 70%;
-} */
-.features {
-  margin: 20px;
-  font-family: 'Roboto';
-  font-size: 1.3em;
-  margin-bottom: 20px;
+.activitypic4{
+    background-image: url("./images/activities/coastline-walk.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
 }
-.rating {
-  color: red;
+.activitypic5{
+    background-image: url("./images/activities/golf.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
 }
+.activitypic6{
+    background-image: url("./images/activities/jet-skiing.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
+}
+.activitypic7{
+    background-image: url("./images/activities/kidsplay.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
+}
+.activitypic8{
+    background-image: url("./images/activities/paintball.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
+}
+.activitypic9{
+    background-image: url("./images/activities/volleyball.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
+}
+.activitypic10{
+    background-image: url("./images/activities/windsurfing.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 60%;
+} 
+*/
 /* footer */
 .footer {
-  /* margin-top: 50px; */
   display: flex;
   flex-direction: column;
   width: 100%;
