Deployment on Heroku

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
       <div class="menu-btn"></div>
       <div class="navigation">
         <div class="navigation-items">
-          <a href="/">Home</a>
+          <a href="/holidayresort">Home</a>
           <a href="/about">About</a>
           <a href="/location-selection">Explore</a>
           <a href="/login">login</a>
