--- a/views/location-selection.ejs
+++ b/views/location-selection.ejs
@@ -12,9 +12,9 @@
       </div>
        <!-- <div class="navigation"> -->
         <div class="navigation-items">
-          <a href="/">Home</a>
-          <a href="about">About</a>
-          <a href="/location-selection">Explore</a>
+          <a href="/holidayresort">Home</a>
+          <a href="/about">About</a>
+          <a href="/views/location-selection.ejs">Explore</a>
           <a href="/login">login</a>
           <a href="/register">sign up</a>
           <a href="/membership">Join</a>
