--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -1,9 +1,3 @@
-
-    
-  
-  
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -49,7 +43,8 @@
             <li><i class="ion-checkmark"> </i>30% Discount on Facilities and acivities</li>
             <!-- <li><i class="ion-checkmark"> </i>Entry fee for member guest 20% off</li> -->
           </ul>
-          <div class="plan-select"><a href="#">Select Plan</a></div>
+          <!-- <button>Choose plan</button> -->
+          <!-- <div class="plan-select"><a href="#">Select Plan</a></div> -->
         </div>
         <div class="plan">
           <h3 class="plan-title">
@@ -60,11 +55,9 @@
             <li><i class="ion-checkmark"> </i>Admit 2 Adults and 4 children</li>
             <li><i class="ion-checkmark"> </i>40% off additional child</li>
             <li><i class="ion-checkmark"> </i>40% discount on Facilities and acivities</li>
-            <!-- <li><i class="ion-checkmark"> </i>10% discount on beach furniture</li>
-            <li><i class="ion-checkmark"> </i>10% discount on beach activities</li>
-            <li><i class="ion-checkmark"> </i>2 free foldable chairs / family</li> -->
           </ul>
-          <div class="plan-select"><a href="#">Select Plan</a></div>
+          <!-- <button>Choose plan</button> -->
+          <!-- <div class="plan-select"><a href="#">Select Plan</a></div> -->
         </div>
         <div class="plan featured">
           <h3 class="plan-title">
@@ -78,7 +71,8 @@
             <!-- <li><i class="ion-checkmark"> </i>20% discount on beach activities</li>
             <li><i class="ion-checkmark"> </i>5 free foldable chairs</li> -->
           </ul>
-          <div class="plan-select"><a href="#">Select Plan</a></div>
+          <!-- <button class="choose-plan">Choose Plan</button> -->
+          <!-- <div class="plan-select"><a href="#">Select Plan</a></div> -->
         </div>
         <div class="plan">
           <h3 class="plan-title">
@@ -95,7 +89,8 @@
             <li><i class="ion-checkmark"> </i>2 Free Foldable Chairs per Family</li>
             <li><i class="ion-checkmark"> </i>Free Use of Astroturf for 4 Weeks Annually</li> -->
           </ul>
-          <div class="plan-select"><a href="#">Select Plan</a></div>
+          <!-- <button class="choose-plan">Choose Plan</button> -->
+          <!-- <div class="plan-select"><a href="#">Select Plan</a></div> -->
         </div>
         <div class="plan">
             <h3 class="plan-title">
@@ -114,7 +109,8 @@
               <li><i class="ion-checkmark"> </i>Free Use of Astroturf for 12 Weeks Annually</li>
               <li><i class="ion-checkmark"> </i>10% Discount on Beach Hire for Events</li> -->
             </ul>
-            <div class="plan-select"><a href="#">Select Plan</a></div>
+            <!-- <div class="plan-select"><a href="#">Select Plan</a></div> -->
+            <!-- <button class="choose-plan">Choose Plan</button> -->
           </div>
     </div>
     <!-- Footer -->
@@ -150,29 +146,87 @@
             </div>
         <!-- </div> -->
     </div>
+    <section class="main-content">
+      <h1>FlutterWave Integration using node.js</h1>
+      <hr />
+      <form action="" method="POST" id="payForm">
+        <label for="">Full Name</label>
+        <input
+          type="text"
+          id="fullName"
+          placeholder="Enter your Full Name"
+          required
+        />
+        <label for="">Phone Number</label>
+        <input
+          type="number"
+          id="phoneNumber"
+          placeholder="Fill in your Phone Number here..."
+          required
+        />
+        <label for="">Email</label>
+        <input
+          type="email"
+          id="email"
+          placeholder="Enter your email here..."
+          required
+        />
+        <label for="">Membership Plan</label>
+        <input type="text" id="amount" placeholder="fill in membership cost"/>
+        
+       
+        <script src="https://checkout.flutterwave.com/v3.js"></script>
+        <button type="button" class="btn">Pay Now</button>
+        <!-- <button type="button" class="btn">Pay</button> -->
+      </form>
+    </section>
     <script>
-        const pay = document.querySelectorAll('plan-select')
-        pay.addEventListener('click', () => {​
-          FlutterwaveCheckout({​
+        const btn = document.querySelectorAll('button');
+        btn.forEach((i)=>{
+
+        i.addEventListener('click', (e) => {
+          e.preventDefault()
+          FlutterwaveCheckout({
             public_key: 'FLWPUBK_TEST-fff91edde08e309a1d1bdaaa796d6b8c-X',
             tx_ref: 'kd_' + Math.floor(Math.random() * 1000000000 + 1),
-            amount: document.getElementsByClassName('plan-price').value,
+            amount: document.getElementById('amount').value,
             currency: 'NGN',
-            customer: {​
-            email: document.getElementById('email').value,
-            phonenumber: document.getElementById('phoneNumber').value,
-            name: document.getElementById('fullName').value,
-            }​,
-            callback: (data) => {​
-            console.log(data);
-            }​,
-            }​);
-          }​)
-      </script>
+            customer: {
+              email: document.getElementById('email').value,
+              phonenumber: document.getElementById('phoneNumber').value,
+              name: document.getElementById('fullName').value,
+            },
+            callback: (data) => {
+              console.log(data);
+            },
+          });
+      });
+}) 
+    </script>
 </body>
 </html> 
     
     
-  
+<!-- 
+  const btn = document.querySelectorAll('button');
+  btn.forEach((i)=>{
+
+  i.addEventListener('click', () => {
+    FlutterwaveCheckout({
+      public_key: 'FLWPUBK_TEST-fff91edde08e309a1d1bdaaa796d6b8c-X',
+      tx_ref: 'kd_' + Math.floor(Math.random() * 1000000000 + 1),
+      amount: document.getElementById('amount').value,
+      currency: 'NGN',
+      customer: {
+        email: document.getElementById('email').value,
+        phonenumber: document.getElementById('phoneNumber').value,
+        name: document.getElementById('fullName').value,
+      },
+      callback: (data) => {
+        console.log(data);
+      },
+    });
+  });
+})  -->
   
 
