--- a/public/stylesheets/style-locationSelection.css
+++ b/public/stylesheets/style-locationSelection.css
@@ -9,120 +9,88 @@ body {
   padding: 0;
   font-family: 'Dosis', sans-serif;
 }
+
 .header_wrapper {
-  background: linear-gradient(
-      rgba(136, 107, 107, 0.8),
+  background-image: linear-gradient(
+      rgba(133, 162, 167, 0.8),
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.4)
     ),
-    url('../images/homepage6.jpeg');
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 80vh;
+    url('../images/water-165219_1280.jpg');
   background-size: cover;
-  overflow: hidden;
-  /* height: 100vh; */
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
 }
-.header-container {
+a {
+  text-decoration: none;
+}
+.menu-btn a {
+  font-size: 20px;
+  font-family: 'poppins' sans-serif;
+  font-style: 'cursive';
+  letter-spacing: 1px;
+  color: white;
+}
+.ejs_header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px;
-  background-color: transparent;
-  /* position: sticky;
-    z-index: 100;
-    top: 0; */
+  position: static;
+  top: 0;
 }
-.nav-container {
-  display: flex;
-  /* position: sticky;
-    top: 0; */
-}
-.page {
-  margin-right: 17px;
-  font-size: 1.3em;
-  color: #fff;
-}
-.page a {
-  text-decoration: none;
-  color: white;
-}
-.join_btn {
-  color: white;
-  background: greenyellow;
-  padding: 8px 12px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.explore_btn {
-  color: white;
-  background: #1a759f;
-  padding: 8px 12px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.page:hover {
-  text-decoration: underline;
-  transition: transform 2s;
-}
-span.join_btn:hover {
-  transition: transform 10s;
-  font-size: 22px;
-}
-span.explore_btn:hover {
-  font-size: 22px;
-  text-decoration: none;
-}
-.header-image {
-  width: 100%;
-  object-fit: contain;
-}
-/* location */
-.location {
-  /* margin: 250px 600px ; */
-  position: absolute;
-  top: 40%;
-  left: 25%;
-}
-.search_bar {
-  width: 50%;
-  margin: 40px;
-  height: 40px;
-  border-radius: 20px;
-  font-size: 20px;
-  font-family: 'Roboto', sans-serif;
-  margin-top: 60px;
-  margin-left: 20%;
-  padding: 5px;
-}
-.destination {
-  color: #ffffff;
-  font-size: 1.7em;
-}
-.destination_text {
-  font-family: 'Roboto', sans-serif;
-  font-size: 60px;
-  font-weight: 400;
-  letter-spacing: 5px;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-.input-destination {
-  /* width: 60%;
-  height: 50px; */
+.navigation-items a {
+  align-items: center;
   padding: 10px;
-  border-radius: 15px;
-  border: none;
-  font-size: 17px;
+  font-size: 20px;
+  font-family: 'poppins' sans-serif;
   color: white;
-  background-color: teal;
-  cursor: pointer;
+  text-decoration: none;
+  transition: linear all 0.5s;
 }
-/* input field */
-/* .activity_container{
-  padding: 15px;
-} */
+.navigation-items a:hover {
+  border: 1px solid white;
+  background: yellowgreen;
+  border-radius: 10px;
+}
+.content {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main_point {
+  font-family: 'poppins' sans-serif;
+  color: white;
+  font-size: 70px;
+  letter-spacing: 5px;
+  font-weight: 500;
+}
+.form_item input {
+  padding: 5px;
+  margin-bottom: 25px;
+  width: 100%;
+  height: 35px;
+  border-radius: 8px;
+  border: none;
+}
+.btn_container button {
+  margin: 5px;
+  padding: 10px;
+  border-radius: 7px;
+  font-size: 18px;
+  color: white;
+  cursor: pointer;
+  background: transparent;
+  transition: linear all 0.4s;
+}
+.btn_container button:hover {
+  background: yellowgreen;
+}
+
 .text_head {
   margin-left: 30px;
   font-size: 35px;
@@ -131,6 +99,7 @@ span.explore_btn:hover {
   margin-top: 20px;
   margin-bottom: 30px;
 }
+
 .input-fields {
   outline: none;
   width: 150px;
@@ -139,11 +108,13 @@ span.explore_btn:hover {
   text-align: center;
   /* margin: 45px; */
 }
+
 .location-text p {
   font-size: 1.2em;
   width: 250px;
   text-align: center;
 }
+
 .location-search {
   outline: none;
   width: 150px;
@@ -152,6 +123,7 @@ span.explore_btn:hover {
   border-radius: 25px;
   font-size: 1.4em;
 }
+
 /* activities palette */
 .activity-selection {
   display: flex;
@@ -161,6 +133,7 @@ span.explore_btn:hover {
   justify-content: space-evenly;
   align-content: center;
 }
+
 .activity {
   /* width: 100px; */
   width: 20%;
@@ -185,6 +158,7 @@ span.explore_btn:hover {
   color: white;
   background-color: #0096c7;
 }
+
 /* Location Selection */
 /* .category {
   display: flex;
@@ -193,6 +167,7 @@ span.explore_btn:hover {
   justify-content: center;
   align-content: center;
 } */
+
 .location_flex {
   /* width: 80%; */
   display: flex;
@@ -204,6 +179,7 @@ span.explore_btn:hover {
   /* flex-direction: row; */
   /* flex-wrap: wrap; */
 }
+
 .image {
   box-sizing: border-box;
   border: 1px solid black;
@@ -218,18 +194,22 @@ span.explore_btn:hover {
   flex-direction: column; */
   /* object-fit: contain; */
 }
+
 /* .img-background {
   height: 70%;
 } */
+
 .features {
   margin: 20px;
   font-family: 'Roboto';
   font-size: 1.3em;
   margin-bottom: 20px;
 }
+
 .rating {
   color: red;
 }
+
 /* footer */
 .footer {
   /* margin-top: 50px; */
