--- a/views/location-selection.ejs
+++ b/views/location-selection.ejs
@@ -2,91 +2,97 @@
 <html>
   <head>
     <title></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/style-locationSelection.css" />
+    <!-- <link rel="stylesheet" href="/stylesheets/indexstyle.css" /> -->
   </head>
   <body>
-  <div class='container'>
-    <div class=' ejs_header'>
-      <div class="menu-btn"> 
-        <a href="#" class="brand">Holiday Resort</a>
-      </div>
-       <!-- <div class="navigation"> -->
-        <div class="navigation-items">
-          <a href="/holidayresort">Home</a>
-          <a href="/about">About</a>
-          <a href="/views/location-selection.ejs">Explore</a>
-          <a href="/login">login</a>
-          <a href="/register">sign up</a>
-          <a href="/membership">Join</a>
+    <div class="container">
+      <div class="header_wrapper">
+        <div class="ejs_header">
+          <div class="menu-btn">
+            <a href="#" class="brand">Holiday Resort</a>
+          </div>
+          <!-- <div class="navigation"> -->
+          <div class="navigation-items">
+            <a href="/holidayresort">Home</a>
+            <a href="/about">About</a>
+            <a href="/views/location-selection.ejs">Explore</a>
+          </div>
+          <!-- </div> -->
         </div>
-      <!-- </div> -->
+
+        <div class="content">
+          <div class="main_point">Welcome</div>
+          <form class="form_item">
+            <input
+              class="serach_bar"
+              placeholder="location"
+              id="location"
+              name="location"
+            />
+            <div class="btn_container">
+              <button id="hotel" class="key">Hotel</button>
+              <button id="golf" class="key">Golf</button>
+              <button id="soccer" class="key">Soccer</button>
+              <button id="basketball" class="key">Basketball</button>
+              <button id="paintballing" class="key">Paintball</button>
+              <button id="skiing" class="key">Skiing</button>
+              <button id="windsurfing" class="key">Windsurfing</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+      <% data?.map((obj) => { %>
+      <img src="<%= obj.photoRef %>" alt="" />
+      <div class="div">
+        <p>Name: <%= obj.name %></p>
+        <p>Address: <%= obj.address %></p>
+        <p>Price: $<%= obj.price %></p>
+        <p>Star Rating: <%= obj.rating %></p>
+      </div>
+      <% }) %>
     </div>
-    
-  <div class="='content">
-    <div class='main_point'>
-      Welcome
-    </div>
-  <form class='form_item'>
-    <input placeholder="location" id="location" name="location">
-    <div class='btn_container'>
-      <button id="hotel" class="key">Hotel</button>
-      <button id="golf"class="key">Golf</button>
-      <button id="soccer"class="key">Soccer</button>
-      <button id="basketball"class="key">Basketball</button>
-      <button id="paintballing"class="key">Paintball</button>
-      <button id="skiing"class="key">Skiing</button>
-      <button id="windsurfing" class="key">Windsurfing</button>
-    </div>
-  </form>
-</div>
-   
-  <% data?.map((obj) => { %>
-    <img src="<%= obj.photoRef %>" alt="">
-    <div class="div">
-      <p> Name: <%= obj.name %> </p>
-      <p> Address: <%= obj.address %> </p>
-      <p> Price: $<%= obj.price %> </p>
-      <p> Star Rating: <%= obj.rating %> </p>
-    </div>
-  <% }) %>
-  </div>
+
     <script>
-      const locate = document.querySelector('#location')
-      const hotelBtn = document.getElementById('hotel').addEventListener('click', (e)=>{
-        e.preventDefault()
-        const firstLocation = locate.value
-        window.location = `http://localhost:3001/location-selection/?key=hotel&location=${firstLocation}`
-      })
-      document.getElementById('golf').addEventListener('click', (e)=>{
-        e.preventDefault()
-        const firstLocation = locate.value
-        window.location = `http://localhost:3001/location-selection/?key=golf&location=${firstLocation}`
-      })
-      document.getElementById('soccer').addEventListener('click', (e)=>{
-        e.preventDefault()
-        const firstLocation = locate.value
-        window.location = `http://localhost:3001/location-selection/?key=soccer&location=${firstLocation}`
-      })
-      document.getElementById('basketball').addEventListener('click', (e)=>{
-        e.preventDefault()
-        const firstLocation = locate.value
-        window.location = `http://localhost:3001/location-selection/?key=basketball&location=${firstLocation}`
-      })
-      document.getElementById('paintballing').addEventListener('click', (e)=>{
-        e.preventDefault()
-        const firstLocation = locate.value
-        window.location = `http://localhost:3001/location-selection/?key=paintballing&location=${firstLocation}`
-      })
-      document.getElementById('skiing').addEventListener('click', (e)=>{
-        e.preventDefault()
-        const firstLocation = locate.value
-        window.location = `http://localhost:3001/location-selection/?key=skiing&location=${firstLocation}`
-      })
-      document.getElementById('windsurfing').addEventListener('click', (e)=>{
-        e.preventDefault()
-        const firstLocation = locate.value
-        window.location = `http://localhost:3001/location-selection/?key=windsurfing&location=${firstLocation}`
-      })
+      const locate = document.querySelector('#location');
+      const hotelBtn = document
+        .getElementById('hotel')
+        .addEventListener('click', (e) => {
+          e.preventDefault();
+          const firstLocation = locate.value;
+          window.location = `http://localhost:3001/location-selection/?key=hotel&location=${firstLocation}`;
+        });
+      document.getElementById('golf').addEventListener('click', (e) => {
+        e.preventDefault();
+        const firstLocation = locate.value;
+        window.location = `http://localhost:3001/location-selection/?key=golf&location=${firstLocation}`;
+      });
+      document.getElementById('soccer').addEventListener('click', (e) => {
+        e.preventDefault();
+        const firstLocation = locate.value;
+        window.location = `http://localhost:3001/location-selection/?key=soccer&location=${firstLocation}`;
+      });
+      document.getElementById('basketball').addEventListener('click', (e) => {
+        e.preventDefault();
+        const firstLocation = locate.value;
+        window.location = `http://localhost:3001/location-selection/?key=basketball&location=${firstLocation}`;
+      });
+      document.getElementById('paintballing').addEventListener('click', (e) => {
+        e.preventDefault();
+        const firstLocation = locate.value;
+        window.location = `http://localhost:3001/location-selection/?key=paintballing&location=${firstLocation}`;
+      });
+      document.getElementById('skiing').addEventListener('click', (e) => {
+        e.preventDefault();
+        const firstLocation = locate.value;
+        window.location = `http://localhost:3001/location-selection/?key=skiing&location=${firstLocation}`;
+      });
+      document.getElementById('windsurfing').addEventListener('click', (e) => {
+        e.preventDefault();
+        const firstLocation = locate.value;
+        window.location = `http://localhost:3001/location-selection/?key=windsurfing&location=${firstLocation}`;
+      });
     </script>
   </body>
 </html>
