--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -147,7 +147,7 @@
         <!-- </div> -->
     </div>
     <section class="main-content">
-      <h1>FlutterWave Integration using node.js</h1>
+      <!-- <h1>FlutterWave Integration using node.js</h1> -->
       <hr />
       <form action="" method="POST" id="payForm">
         <label for="">Full Name</label>
@@ -190,7 +190,7 @@
             public_key: 'FLWPUBK_TEST-fff91edde08e309a1d1bdaaa796d6b8c-X',
             tx_ref: 'kd_' + Math.floor(Math.random() * 1000000000 + 1),
             amount: document.getElementById('amount').value,
-            currency: 'NGN',
+            currency: '$',
             customer: {
               email: document.getElementById('email').value,
               phonenumber: document.getElementById('phoneNumber').value,
