plan features added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,9 +19,10 @@
           <a href="/holidayresort">Home</a>
           <a href="/about">About</a>
           <a href="/location-selection">Explore</a>
+          <a href="/plan">Plan</a>
+          <a href="/membership">Join</a>
           <a href="/login">login</a>
           <a href="/register">sign up</a>
-          <a href="/membership">Join</a>
         </div>
       </div>
     </header>
