--- a/views/location-selection.ejs
+++ b/views/location-selection.ejs
@@ -16,7 +16,7 @@
           <div class="navigation-items">
             <a href="/holidayresort">Home</a>
             <a href="/about">About</a>
-            <a href="/views/location-selection.ejs">Explore</a>
+            <a href="/location-selection">Explore</a>
           </div>
           <!-- </div> -->
         </div>
@@ -26,7 +26,7 @@
           <form class="form_item">
             <input
               class="serach_bar"
-              placeholder="location"
+              placeholder="City"
               id="location"
               name="location"
             />
