--- a/views/loginusers.ejs
+++ b/views/loginusers.ejs
@@ -16,7 +16,7 @@
       <div class="menu-btn"></div>
       <div class="navigation">
         <div class="navigation-items">
-          <a href="/loginusers">Home</a>
+          <a href="/newhome">Home</a>
           <a href="/about">About</a>
           <a href="/location-selection">Explore</a>
           <a href="/logout">Logout</a>
