--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Holiday Resort</title>
     <link rel="stylesheet" href="./stylesheets/style.css" />
+    <link rel="stylesheet" href="./stylesheets/indexstyle.css" />
+    <!-- <link rel="stylesheet" href="stylesheets/style-membership.css" /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
@@ -121,6 +123,102 @@
         <div class="nav-btn"></div>
       </div>
     </section>
+
+ <div class="countries">
+  <div class="countries-head">Countries </div>
+  <div class="countries-wrapper">
+      <div class="country img1">Rome</div>
+      <div class="country img2">Cairo</div>
+      <div class="country img3">Dubai</div>
+      <div class="country img4">Panama</div>
+      <div class="country img5">Mauritius</div>
+      <div class="country img6">Turkey</div> 
+  </div>
+</div>
+<!-- activities --> 
+<div class="activities-wrapper">
+  <h2 class="activities-head">Activities</h2> 
+  <div class="box">
+      <div class="activity">
+          <div class="activity-pic activitypic1">Astroturf</div>
+          <p>Play the beautiful game on a purpose built astroturf pitch which can accomodate anywhere from 5 to 8 a side. Organise mini leagues with friends and family with our astroturf league package.</p>
+      </div>
+      <div class="activity">
+          <div class="activity-pic activitypic2">Beach-Basketball</div>
+          <p>Enjoy court bookings for corporate bodies, tournaments or those that don't have a team, you can show up suitably kitted and join like-mind for fun in alloted sessions.</p>
+      </div>
+      <div class="activity">
+          <div class="activity-pic activitypic3">Beach-Soccer</div>
+          <p>Enjoy matches with friends or host soccer tournaments on the sandy shores of the Landmark Leisure Beach front. Beach soccer activity is made available on request.</p>
+      </div>
+      <div class="activity">              
+          <div class="activity-pic activitypic4">Coastline walk</div>
+          <p>Africa's first pedestrian and cycle path boardwalk along the Atlantic coastline, spanning the distance of the Landmark Village, home to Hardrock Café, Shiro Restaurant, the renowned Landmark Event Centre and the upcoming Retail Boulevard.</p></div>
+      <div class="activity">
+          <div class="activity-pic activitypic5">Mini-Golf</div>
+          <p>Our exciting and challenging putting course has been specially designed to suit all abilities from the novice to the experienced golfer. It’s great fun for all ages so the whole family can play.</p>
+      </div>
+      <div class="activity">
+          <div class="activity-pic activitypic6">Jet-skiing</div>
+          <p>Rent a jetski and enjoy an exhilirating ride across the Atlantic coastline with a backdrop of Hard Rock Cafe and the Eko Atlantic.</p>
+      </div> 
+      <div class="activity">
+          <div class="activity-pic activitypic7">Kids-play</div>
+          <p>The kids are not left out too. A play area dedicated to making sure they maximise fun time on the beach.</p>
+      </div> 
+      <div class="activity">
+          <div class="activity-pic activitypic8">Paintball</div>
+          <p>A fast-paced, heart-racing activity of fun for friends and family. Manoeuver through obstacles while dodging and shooting paintballs at a whooping 190 mph at your opposing team members. Now how fun does that sound?</p>
+      </div> 
+      <div class="activity">
+          <div class="activity-pic activitypic9">Volleyball</div>
+          <p>Landmark Leisure Beach is equipped with a well-cordoned area for beach volleyball activities open to everyone.</p>
+      </div> 
+      <div class="activity">
+          <div class="activity-pic activitypic10">Windsurfing</div>
+          <p>Surf's up at the Landmark Leisure Beach! Experience gliding across the Atlantic coastline with conditions perfect for either kite or wind surfing.</p>
+      </div> 
+  </div>
+</div>
+<!-- Footer -->
+<div class="footer">
+  <!-- <div class="footer-el"> -->
+      <div class="footer-top">
+          <div class="foot first-column">
+              <div class="logo-footer"><h2>LA CRUZE</h2></div>
+              <div class="about-footer"><p>Your leisure is our delight. The La Cruz brand is located in Elegushi, Lekki, Lagos State. We operate as an online brand who connect our esteemed members to all the juciest deals to fun and adventurous places
+                  as ell as activities all over the Globe. We would bedelighted to meet your audacious cravings.</p>
+              </div>
+              <div class="follow">
+                  <p>Follow us on Twitter Facebook Instagram</p>
+              </div>
+          </div>
+          <div class="foot second-column">
+              <div class="links-footer"><h2>USEFUL LINKS</h2></div>
+              <p>Activities</p>
+              <p>Access and Membership</p>
+              <p>Contact</p>
+          </div>
+          <div class="foot third-column">
+              <div class="contact-footer"><h2>CONTACT US</h2></div>
+                  <p>Phone: +2348148882784</p>
+                  <p>WhatsApp: +2348148882784</p>
+                  <p>info@lacruz.gmail.ng</p>
+              </div>
+          </div>
+      </div>
+      <div class="footer-bottom">
+          <!-- <hr> -->
+          <p class = "terms">Terms and Conditions | La CRUZE World wide</p>
+      </div>
+  <!-- </div> -->
+</div>
+
+
+
+
+
+
 
     <script type="text/javascript">
       //Javacript for responsive navigation menu
