--- a/views/loginusers.ejs
+++ b/views/loginusers.ejs
@@ -16,7 +16,7 @@
       <div class="menu-btn"></div>
       <div class="navigation">
         <div class="navigation-items">
-          <a href="/newhome">Home</a>
+          <a href="/holidayresort">Home</a>
           <a href="/about">About</a>
           <a href="/location-selection">Explore</a>
           <a href="/logout">Logout</a>
@@ -120,32 +120,32 @@
     </section>
     <script type="text/javascript">
       //Javacript for responsive navigation menu
-      const menuBtn = document.querySelector('.menu-btn');
-      const navigation = document.querySelector('.navigation');
-      menuBtn.addEventListener('click', () => {
-        menuBtn.classList.toggle('active');
-        navigation.classList.toggle('active');
+      const menuBtn = document.querySelector(".menu-btn");
+      const navigation = document.querySelector(".navigation");
+      menuBtn.addEventListener("click", () => {
+        menuBtn.classList.toggle("active");
+        navigation.classList.toggle("active");
       });
       //Javacript for video slider navigation
-      const btns = document.querySelectorAll('.nav-btn');
-      const slides = document.querySelectorAll('.video-slide');
-      const contents = document.querySelectorAll('.content');
+      const btns = document.querySelectorAll(".nav-btn");
+      const slides = document.querySelectorAll(".video-slide");
+      const contents = document.querySelectorAll(".content");
       var sliderNav = function (manual) {
         btns.forEach((btn) => {
-          btn.classList.remove('active');
+          btn.classList.remove("active");
         });
         slides.forEach((slide) => {
-          slide.classList.remove('active');
+          slide.classList.remove("active");
         });
         contents.forEach((content) => {
-          content.classList.remove('active');
+          content.classList.remove("active");
         });
-        btns[manual].classList.add('active');
-        slides[manual].classList.add('active');
-        contents[manual].classList.add('active');
+        btns[manual].classList.add("active");
+        slides[manual].classList.add("active");
+        contents[manual].classList.add("active");
       };
       btns.forEach((btn, i) => {
-        btn.addEventListener('click', () => {
+        btn.addEventListener("click", () => {
           sliderNav(i);
         });
       });
