--- a/views/plan.ejs
+++ b/views/plan.ejs
@@ -17,7 +17,7 @@
         <div class="header-container">
           <h1 id="logo">Holiday Resort</h1>
           <div class="nav-container">
-            <div class="page"><a href="/holidayresort">Home</a></div>
+            <div class="page"><a href="/loginusers">Home</a></div>
             <div class="page">
               <span class="explore_btn"
                 ><a href="location-selection">Explore</a></span
@@ -28,7 +28,7 @@
         <div class="location">
           <p class="destination_text">Your Next Destination?</p>
           <button class="input-destination">
-            <a href="location-selection.html">TAKE ME</a>
+            <a href="location-selection">TAKE ME</a>
           </button>
         </div>
       </div>
