--- a/public/stylesheets/style-membership.css
+++ b/public/stylesheets/style-membership.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 /* membership import */
 /* @import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500,800);
@@ -11,9 +11,10 @@ body {
   margin: 0;
   box-sizing: border-box;
   padding: 0;
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   /* overflow: hidden; */
 }
+
 .header_wrapper {
   background: linear-gradient(
       rgba(136, 107, 107, 0.8),
@@ -21,7 +22,7 @@ body {
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.4)
     ),
-    url('../images/atoll-2179102.jpg');
+    url("../images/atoll-2179102.jpg");
   background-repeat: no-repeat;
   background-position: center;
   height: 80vh;
@@ -89,7 +90,7 @@ span.explore_btn:hover {
   font-size: 1.7em;
 }
 .destination_text {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 5px;
@@ -106,6 +107,7 @@ span.explore_btn:hover {
   color: white;
   background-color: teal;
   cursor: pointer;
+  text-decoration: none;
 }
 .input-destination a {
   text-decoration: none;
@@ -118,7 +120,7 @@ span.explore_btn:hover {
   margin-top: 70px;
   text-align: center;
   font-size: 40px;
-  font-family: 'popping', sans-serif;
+  font-family: "popping", sans-serif;
   initial-letter: 5px;
   font-weight: 300;
 }
@@ -362,7 +364,7 @@ p.terms {
   font-size: 2em;
 }
 .membership-pricing {
-  font-family: 'Raleway', Arial, sans-serif;
+  font-family: "Raleway", Arial, sans-serif;
   color: #000000;
   text-align: center;
   font-size: 16px;
@@ -406,7 +408,7 @@ p.terms {
   padding: 0px 10px 20px;
 }
 .membership-pricing .plan-price {
-  font-family: 'Montserrat', Arial, sans-serif;
+  font-family: "Montserrat", Arial, sans-serif;
   font-weight: 800;
   font-size: 2.4em;
   color: #34495e;
@@ -515,7 +517,7 @@ section.main-content {
   border: none;
   border-radius: 10px;
   padding: 10px;
-  background: #e9c46a;
+  background: #e3dcce;
 }
 section button {
   background: black;
