--- a/views/plan2.ejs
+++ b/views/plan2.ejs
@@ -19,17 +19,17 @@
           <div class="nav-container">
             <div class="page"><a href="/loginusers">Home</a></div>
             <div class="page">
-              <span class="explore_btn"><a href="location-selection2">Explore</a></span>
+                <span class="explore_btn"><a href="location-selection2">Explore</a></span>
             </div>
+            
             <div class="page"><a href="/logout">Logout</a></div>
           </div>
         </div>
         <div class="location">
           <p class="destination_text">Your Next Destination?</p>
-          
-            <a href="location-selection2"> <input class="input-destination ddjk" type="button" value="TAKE ME"></a>
-           
-          
+          <button class="input-destination">
+            <a href="location-selection">TAKE ME</a>
+          </button>
         </div>
       </div>
     </div>
@@ -131,61 +131,8 @@
     </div>
 
     <section class="main-content">
-      <h1>Choose a payment plan</h1>
+      <h1>Login And Choose a payment Plan</h1>
       <!-- <hr /> -->
-      
-      <div class='form_container'>
-        <form action="" method="POST" id="payForm">
-          <div class="class">
-            <label class= "label" for="">Full Name</label>
-            <input class = "input-field"
-              type="text"
-              id="fullName"
-              placeholder="Enter your Full Name"
-              required
-            />
-          </div>
-          <div class="class">
-              <label class= "label" for="">Phone Number</label>
-              <input class = "input-field"
-                type="number"
-                id="phoneNumber"
-                placeholder="Fill in your Phone Number here..."
-                required
-              />
-          </div>
-
-          <div class="class">
-            <label class= "label" for="">Email</label>
-            <input class = "input-field"
-              type="email"
-              id="email"
-              placeholder="Enter your email here..."
-              required
-            />
-          </div>
-
-          <div class="class">
-            <label class= "label" for="">Plan</label>
-            <input class = "input-field"
-              type="text"
-              id="email"
-              placeholder="Enter your membership plan here..."
-              required
-            />
-          </div>
-
-          <div class="class">
-            <label class= "label" for="">Membership Plan</label>
-            <input class = "input-field" type="text" id="amount" placeholder="fill in membership cost" />
-          </div>
-
-  
-          
-          <button type="button" class="btn">Pay Now</button>
-        </form>
-
-        <script src="https://checkout.flutterwave.com/v3.js"></script>
          </div>
     </section>
 
@@ -221,32 +168,7 @@
      <p class = "terms">Terms and Conditions | La CRUZE World wide</p>
     <!-- </div> -->
     <!-- </div> -->
-   <script>
-              const btn = document.querySelectorAll('button');
-              btn.forEach((i)=>{
 
-              i.addEventListener('click', (e) => {
-                e.preventDefault()
-                FlutterwaveCheckout({
-                  public_key: 'FLWPUBK_TEST-fff91edde08e309a1d1bdaaa796d6b8c-X',
-                  tx_ref: 'kd_' + Math.floor(Math.random() * 1000000000 + 1),
-                  amount: document.getElementById('amount').value,
-                  currency: 'NGN',
-                  customer: {
-                    email: document.getElementById('email').value,
-                    phonenumber: document.getElementById('phoneNumber').value,
-                    name: document.getElementById('fullName').value,
-                  },
-                  callback: (data) => {
-                    console.log(data);
-                  },
-                });
-            });
-      })
-
-
-        
-    </script> 
   </body>
 </html>
 
